--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "@types/multer": "^1.4.8",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.4.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
+    "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.19",
+    "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.6",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
