--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"**/*.{ts,js,json}\""
   },
   "dependencies": {
+    "@prisma/client": "^5.4.2",
     "@types/multer": "^1.4.8",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
