--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.4.2"
   },
