--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.4.2",
-    "bcrypt": "^5.1.1",
+    "argon2": "^0.31.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -22,12 +22,11 @@
     "prisma": "^5.4.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.1",
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.4",
-    "@types/node": "^20.8.6",
+    "@types/node": "^20.8.7",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
