--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "format": "prettier --write \"**/*.{ts,js,json}\""
   },
   "dependencies": {
-    "@prisma/client": "^5.4.2",
-    "argon2": "^0.31.1",
+    "@prisma/client": "^5.5.2",
+    "argon2": "^0.31.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status": "^1.7.3",
-    "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.4.2"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.5",
@@ -35,6 +34,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.0.3",
+    "prisma": "^5.5.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
